syntax = "proto2";

import public "common_client.proto";
import public "erddz_base.proto";

package ddproto;
option optimize_for = LITE_RUNTIME;

// 创建房间
message erddz_req_createDesk {
    optional ProtoHeader header = 1;
    optional erddz_base_roomTypeInfo roomTypeInfo = 2; // 房间类型信息，包括：房间类型、局数、封顶、玩法、牌张、结算、底
}

// 创建房间回复的信息
message erddz_ack_createDesk {
    optional ProtoHeader header = 1;
    optional int32 deskId = 2; // 用户id
    optional string password = 3; // 房间密码
    optional int64 createFee = 5; // 创建房间所需的房卡
    optional erddz_base_roomTypeInfo roomTypeInfo = 6; // 房间类型信息，包括：房间类型、局数、封顶、玩法、牌张、结算、底
}

// 客户端请求进入 room, 服务器返回DdzSendGameInfo
message erddz_req_enterDesk {
    optional ProtoHeader header = 1;
    optional string PassWord = 2; // 房间密码 金币场不使用
    optional uint32 userId = 3; // 请求的userId

    optional erddz_enum_roomType roomType = 4; // 房间的类型
    optional erddz_enum_coinRoomLevel coinRoomLevel = 5; //金币场的级别
}

message erddz_ack_enterDesk {
    optional ProtoHeader header = 1;
}

